--- a/src/componentsCSS/aboutme.module.css
+++ b/src/componentsCSS/aboutme.module.css
@@ -1,30 +1,13 @@
-.aboutme_title{
-    color: #26cad0;
-    font-size: 1.9rem;
+.aboutme_title {
+  color: #26cad0;
+  font-size: 1.9rem;
 }
 
-
-.aboutme_info{
-    margin:0 5vw;
+.p{
+  margin: 0 3vw;
 }
-
-
-.sabermas_btn{
-    color: #d1d5db;
-    text-decoration: none;
-    background-color: #08ABB1;
-    padding: 10px;
-    border-radius: 10px;
-    transition: all 300ms;
-}
-
-.sabermas_btn:hover{
-    box-shadow: 0 0 0 5px #078D93;
-}
-
-
-@media only screen and (min-width: 600px){
-    .aboutme_info{
-        margin: 0 2vw;
-    }
+@media only screen and (min-width: 600px) {
+  .p{
+    margin: 0 2vw;
+  } 
 }
