--- a/src/componentsCSS/skills.module.css
+++ b/src/componentsCSS/skills.module.css
@@ -8,7 +8,7 @@
   color: unset;
   background-color: #198754;
   padding: 10px;
-  margin: 10px;
+  margin-top: 30px;
   width: 75%;
   border-radius: 5px;
   transition: all 300ms;
@@ -58,7 +58,6 @@
 }
 
 .skill:hover {
-  box-shadow: 0 0 0 5px #44dde2;
   cursor: pointer;
 }
 
