borre 1 archivo de prueba y 1 archivo creado por error. Y agregue una opción para copiar mi correo electrónico en el componente Socials.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-body {
+* {
   font-family: "Bricolage Grotesque", sans-serif;
+}
+
+body {
   margin: 0;
   padding: 0;
   background-color: #181f47;
