--- a/src/componentsCSS/socials.module.css
+++ b/src/componentsCSS/socials.module.css
@@ -1,34 +1,70 @@
-.socials_main h1{
-    color: #26cad0;
-    font-size: 2rem;
-}
-.socials_main{
-    margin: 5vw 0;
-}
-.socials{
-    display: flex;
-    justify-content: center;  
-    flex-wrap: wrap;
+.socials_main h1 {
+  color: #26cad0;
+  font-size: 2rem;
 }
 
-.socials_icon{
-    width: 50px;
-    margin: 5px;
+.mail_div {
+  display: flex;
+  background-color: #2c3661;
+  transition: all 300ms;
+  border-radius: 5px;
 }
-.social_container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100px;
-    background-color: #2C3661;
-    border-radius: 10px;
-    padding: 10px;
-    margin:10px;
-    color: #d1d5dc;
-    text-decoration: none;
-    transition: 300ms;
-    font-size: 1rem;
+.mail_div:hover{
+  box-shadow: 0 0 0 5px #3c4976;
+  border-radius: 10px;
 }
-.social_container:hover{
-    box-shadow: 0 0 0 5px #3C4976;
+.mail_div input {
+  align-items: center;
+  width: 80%;
+  margin: auto;
+  background-color: unset;
+  border: none;
+  outline: none;
+  color: #d1d5dc;
+  font-size: 1.1rem;
+  padding: 10px;
+}
+
+.send_mail_h4 {
+  color: #26cad0;
+}
+
+.send_svg:hover {
+  cursor: pointer;
+}
+
+.socials_main {
+  margin: 5vw 0;
+}
+.socials {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.socials_icon {
+  width: 50px;
+  margin: 5px;
+}
+.social_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100px;
+  background-color: #2c3661;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  color: #d1d5dc;
+  text-decoration: none;
+  transition: 300ms;
+  font-size: 1rem;
+}
+.social_container:hover {
+  box-shadow: 0 0 0 5px #3c4976;
+}
+@media only screen and (min-width: 600px){
+  .mail_div:hover{
+    scale: 1.02;
+  }
 }
