--- a/src/componentsPages/PagesCSS/more.module.css
+++ b/src/componentsPages/PagesCSS/more.module.css
@@ -32,7 +32,7 @@ svg {
 .css_,
 .html_,
 .js_ {
-  background-color: #3c4976;
+  background-color: #1b2047;
   padding: 20px;
   border-radius: 20px;
   margin: 10px;
