cambie la fuente de el typewriter

--- a/src/componentsCSS/main.module.css
+++ b/src/componentsCSS/main.module.css
@@ -17,6 +17,7 @@
   font-weight: 800;
   margin-top: 5vw;
   text-align: center;
+  font-family: monospace, "Bricolage Grotesque", sans-serif;
 }
 
 .main_img {
