--- a/src/componentsCSS/socials.module.css
+++ b/src/componentsCSS/socials.module.css
@@ -24,6 +24,7 @@
   color: #d1d5dc;
   font-size: 1.1rem;
   padding: 10px;
+  font-family: "Bricolage Grotesque", sans-serif;
 }
 
 .send_mail_h4 {
