--- a/src/componentsCSS/projects.module.css
+++ b/src/componentsCSS/projects.module.css
@@ -6,6 +6,7 @@
 
 .title {
   font-size: 2rem;
+    max-width: 30vw;
   color: #26cad0;
   font-weight: 700; 
 }
@@ -18,6 +19,7 @@
   margin-top: 10px;
   width: 90vw;
   border-radius: 20px;
+  aspect-ratio: 16/9;
 }
 
 .project_info {
@@ -31,7 +33,6 @@
 @media only screen and (min-width: 600px) {
   .project_image {
     width: 30vw;
-    max-width: 30vw;
   } 
   .project {
     display: flex;
