--- a/src/componentsCSS/projects.module.css
+++ b/src/componentsCSS/projects.module.css
@@ -6,20 +6,26 @@
 
 .title {
   font-size: 2rem;
-    max-width: 30vw;
+  max-width: 30vw;
   color: #26cad0;
-  font-weight: 700; 
+  font-weight: 700;
 }
 .project_title {
   font-size: 1.5rem;
   font-weight: 700;
 }
 
+.projects_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;
+}
+
 .project_image {
   margin-top: 10px;
   width: 90vw;
   border-radius: 20px;
-  aspect-ratio: 16/9;
 }
 
 .project_info {
@@ -33,13 +39,11 @@
 @media only screen and (min-width: 600px) {
   .project_image {
     width: 30vw;
-  } 
+  }
   .project {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 2vw 0;
   }
-  
-
 }
