--- a/src/componentsCSS/navbar.module.css
+++ b/src/componentsCSS/navbar.module.css
@@ -30,8 +30,10 @@ a {
   top: 10px;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
+  align-items: center;
   position: sticky;
-  opacity: .8;
+  opacity: 0.8;
 }
 
 a {
@@ -45,7 +47,7 @@ a {
   transition: all 300ms;
   width: 100%;
 }
-.d_none{
+.d_none {
   display: none;
 }
 @media only screen and (min-width: 600px) {
