--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+@tailwindcss base;
+@tailwindcss components;
+@tailwindcss utilities;
 * {
   scroll-behavior: smooth;
   outline: none !important;
+  font-family: "Bricolage Grotesque", "Onest", sans-serif;
 }
 
 body {
-  font-family: "Bricolage Grotesque", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #181f47;
