--- a/src/componentsCSS/main.module.css
+++ b/src/componentsCSS/main.module.css
@@ -3,15 +3,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: auto;
-  margin-top: 5vw;
   text-align: center;
   width: 100%;
 }
 
 .title {
   color: #26acd0;
-  text-shadow: #078d93 1px 0 20px;
   width: 350px;
   font-size: 2.3rem;
   font-weight: 800;
@@ -21,9 +18,8 @@
 }
 
 .main_img {
-  width: 200px;
+  width: 290px;
   margin: 20px;
-  box-shadow: 0 0 20px 20px #3c4976;
   border-radius: 50%;
 }
 
@@ -35,22 +31,13 @@
   justify-content: center;
   text-align: center;
 }
- @media only screen and (min-width: 600px) {
- .main_img {
-    width: 250px;
-  }
+@media only screen and (min-width: 600px) {
   .main_container {
     flex-direction: row;
+    margin: 0;
   }
-  .main_info {
-    text-align: left;
-  }
+
   .title {
     font-size: 2.2rem;
   }
-  .main_container{
-      margin: 1vw;
-  }
 }
-
-
