--- a/src/componentsCSS/aboutme.module.css
+++ b/src/componentsCSS/aboutme.module.css
@@ -1,13 +1,17 @@
+.aboutme_main {
+  margin: 5vw auto;
+}
 .aboutme_title {
   color: #26cad0;
   font-size: 1.9rem;
+  font-weight: 900;
 }
 
-.p{
+.p {
   margin: 0 3vw;
 }
 @media only screen and (min-width: 600px) {
-  .p{
+  .p {
     margin: 0 2vw;
-  } 
+  }
 }
