ahora la página se puede ver en modo claro y en modo oscuro

--- a/src/componentsCSS/aboutme.module.css
+++ b/src/componentsCSS/aboutme.module.css
@@ -2,7 +2,7 @@
   margin: 5vw auto;
 }
 .aboutme_title {
-  color: #26cad0;
+  color: var(--section-title);
   font-size: 1.9rem;
   font-weight: 900;
 }
