--- a/src/componentsCSS/navbar.module.css
+++ b/src/componentsCSS/navbar.module.css
@@ -13,7 +13,7 @@ a {
 
 .sect:hover {
   cursor: pointer;
-  background-color: #26acd0;
+  background-color: #1b7a94;
 }
 .navbar_main {
   background-color: #0a0924;
