--- a/src/componentsCSS/skills.module.css
+++ b/src/componentsCSS/skills.module.css
@@ -1,6 +1,6 @@
 .title {
   font-size: 2rem;
-  color: #26cad0;
+  color: var(--section-title);
   font-weight: 900;
 }
 .more_btn {
@@ -9,9 +9,10 @@
   background-color: #198754;
   padding: 10px;
   margin-top: 30px;
-  width: 75%;
+  width: 70%;
   border-radius: 5px;
   transition: all 300ms;
+  color: (--text-color);
 }
 
 .more_btn:hover {
@@ -48,13 +49,16 @@
 .skill {
   display: flex;
   width: 50vw;
-  background-color: #3c4976;
+  /* background-color: #3c4976;s
+ */
+  background: var(--box-background);
   border-radius: 10px;
   padding: 0 20px;
   margin: 10px;
   transition: all 300ms;
   justify-content: center;
   align-items: center;
+  color: var(--box-text);
 }
 
 .skill:hover {
@@ -77,7 +81,6 @@ svg {
   }
   .skill {
     width: 200px;
-    background-color: #1b2047;
   }
   .more_btn {
     grid-column: span 2;
