ajustes de colores. y ajustes en los proyectos y en el tamaño de la fuente

--- a/src/componentsCSS/goals.module.css
+++ b/src/componentsCSS/goals.module.css
@@ -4,16 +4,14 @@
   flex-direction: column;
 }
 .title {
-  font-weight: 900;
   color: var(--section-title);
-  font-size: 2rem;
 }
 ul li {
   list-style: circle;
 }
 ul li span {
   color: var(--section-title);
-  font-weight: 600;
+  font-weight: bold;
 }
 
 .goals_ul {
