--- a/src/componentsCSS/main.module.css
+++ b/src/componentsCSS/main.module.css
@@ -9,13 +9,15 @@
 
 .title {
   color: var(--section-title);
-  font-size: 2.3rem;
-  font-weight: 900;
 }
 
 .main_img {
   width: 290px;
   border-radius: 50%;
+}
+
+.main_span{
+  font-family: 'Space Mono';
 }
 
 .main_info {
