--- a/src/componentsCSS/projects.module.css
+++ b/src/componentsCSS/projects.module.css
@@ -6,15 +6,37 @@
   margin: 5vw auto;
 }
 
+.project {
+  width: 90%;
+  padding: 20px;
+  transition: all 300ms;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+  text-align: center;
+  gap: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  transition: scale 0.3s ease, box-shadow 0.3s ease;
+}
+
+.project:last-child {
+  border-bottom: none;
+}
+
+.project:hover {
+  scale: 1.03;
+  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.5);
+}
+
 .title {
-  font-size: 2rem;
   color: var(--section-title);
-  font-weight: 900;
   align-self: flex-start;
 }
 .project_title {
-  font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: bold;
+  width: 100%;
 }
 
 .projects_container {
@@ -22,21 +44,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 5vh;
 }
 
 .project_image {
   margin-top: 10px;
-  width: 90vw;
+  width: 70%;
   border-radius: 15px;
-}
-
-.project_info {
-  margin: 10px 10px 10px 25px;
 }
 
 .project_a {
   color: var(--section-title);
-  font-weight: 700;
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 600px) {
@@ -45,11 +64,16 @@
   }
   .project {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 2vw 0;
+    width: 100%;
+    flex-direction: row;
+    justify-content: left;
+    text-align: left;
   }
-  .alarmapp_image {
-    aspect-ratio: 16/9;
+  .projects_hr {
+    display: none;
+  }
+  .projects_container {
+    width: 100%;
+    flex-wrap: wrap;
   }
 }
