--- a/src/componentsCSS/socials.module.css
+++ b/src/componentsCSS/socials.module.css
@@ -1,39 +1,5 @@
-.socials_main h1 {
+.socials_main h2 {
   color: var(--section-title);
-  font-size: 2rem;
-  font-weight: 900;
-}
-
-.mail_div {
-  display: flex;
-  background-color: #2c3661;
-  transition: all 300ms;
-  border-radius: 5px;
-}
-
-.mail_div:hover {
-  box-shadow: 0 0 0 5px #3c4976;
-  border-radius: 10px;
-}
-.mail_div input {
-  align-items: center;
-  width: 80%;
-  margin: auto;
-  background-color: unset;
-  border: none;
-  outline: none;
-  color: #d1d5dc;
-  font-size: 1.1rem;
-  padding: 10px;
-  font-family: "Bricolage Grotesque", sans-serif;
-}
-
-.send_mail_h4 {
-  color: #26cad0;
-}
-
-.send_svg:hover {
-  cursor: pointer;
 }
 
 .socials_main {
@@ -50,11 +16,15 @@
   margin: 5px;
 }
 .social_container {
+  background: rgba(255, 255, 255, 0.1); /* Fondo translúcido */
+  backdrop-filter: blur(10px); /* Efecto de desenfoque */
+  -webkit-backdrop-filter: blur(10px); /* Compatibilidad para Safari */
+  border-radius: 12px; /* Bordes redondeados */
+  border: 1px solid rgba(255, 255, 255, 0.2);
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100px;
-  background-color: var(--box-background);
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
@@ -72,5 +42,4 @@
   .mail_div:hover {
     scale: 1.02;
   }
-
 }
