--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,40 @@
 * {
   scroll-behavior: smooth;
   outline: none !important;
-  font-family: "Inter", "Onest", sans-serif;
 }
 
-
-:root{
-  --background-color: #181f47;
+:root {
+  --background-color: #090f20;
   --text-color: #d1d5d0;
 
   --desktop-background: #142047;
   --desktop-gradient: radial-gradient(at center top, #142047, #010101) 0px;
 
-
   --section-title: #26acd0;
-
+  --title-font-weight: 700;
   /*----skills section*/
   --box-background: rgb(51, 62, 111);
-
 }
-@media (prefers-color-scheme: light){
-  :root{
+@media (prefers-color-scheme: light) {
+  :root {
     --background-color: rgb(229, 229, 229);
     --text-color: rgb(0, 0, 0);
 
     --desktop-background: rgb(181, 181, 181);
     --desktop-gradient: rgb(181, 181, 181);
-    
 
-   --section-title: #1b7a94;
-  
-   /*--skills section-------*/
-   --box-background: rgb(81, 93, 144);
+    --section-title: #1b7a94;
+
+    /*--skills section-------*/
+    --box-background: rgb(81, 93, 144);
   }
 }
 body {
   margin: 0;
   background-color: var(--background-color);
   color: var(--text-color);
-  font-size: 1.2rem;
   line-height: 1.5;
+  font-family: "Inter";
 }
 
 body::-webkit-scrollbar {
@@ -58,9 +53,8 @@ body::-webkit-scrollbar-thumb {
     background-color: var(--desktop-background);
     background: var(--desktop-gradient);
     transition: background 500ms;
-    width: 48rem;
+    width: 50rem;
     margin: auto;
     z-index: -1;
   }
 }
-
