agregue la seccion de los certificados y le hice unos ajustes a los tamaños de la fuente y a otros detalles más

--- a/src/componentsCSS/main.module.css
+++ b/src/componentsCSS/main.module.css
@@ -16,8 +16,9 @@
   border-radius: 50%;
 }
 
-.main_span{
-  font-family: 'Space Mono';
+.main_span {
+  font-family: "JetBrains Mono";
+  font-weight: 900;
 }
 
 .main_info {
