--- a/src/componentsCSS/navbar.module.css
+++ b/src/componentsCSS/navbar.module.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 5px;
   transition: all 300ms;
+  z-index: 999;
 }
 
 a {
@@ -30,6 +31,7 @@ a {
   gap: 10px;
 }
 .navbar_main_sect {
+  z-index: 999;
   width: 92%;
   top: 10px;
   margin: 0 auto;
