--- a/src/componentsCSS/skills.module.css
+++ b/src/componentsCSS/skills.module.css
@@ -1,22 +1,29 @@
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 90vw;
+}
+
 .title {
   color: var(--section-title);
 }
-/**/
 .more_btn {
   text-decoration: none;
   color: unset;
   background-color: #198754;
-  padding: 10px;
-  margin-top: 30px;
+  padding: 10px 20px;
   width: 60%;
   border-radius: 20px;
   transition: all 300ms;
   color: (--text-color);
+  margin: 0px 10px auto 10px;
 }
 
 .more_btn:hover {
   scale: 1.04;
-  box-shadow: 0 0 0 5px #1da86780;
+  box-shadow: 0 0 0 5px #1da86728;
 }
 
 .skills_image_container {
@@ -48,8 +55,6 @@
 .skill {
   display: flex;
   width: 50vw;
-  /* background-color: #3c4976;s
- */
   border-radius: 10px;
   padding: 0 20px;
   margin: 10px;
@@ -57,7 +62,6 @@
   justify-content: center;
   align-items: center;
   color: var(--box-text);
-
   background: rgba(255, 255, 255, 0.1); /* Fondo translúcido */
   backdrop-filter: blur(10px); /* Efecto de desenfoque */
   -webkit-backdrop-filter: blur(10px); /* Compatibilidad para Safari */
@@ -69,16 +73,26 @@
   cursor: pointer;
 }
 
+.buttons_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  text-align: center;
+}
 svg {
   margin: 10px;
 }
 
 @media only screen and (min-width: 600px) {
+  .main {
+    width: 100%;
+  }
   .skills {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
-    width: 200px;
   }
   .skills_image_container {
     justify-content: center;
@@ -86,8 +100,13 @@ svg {
   .skill {
     width: 200px;
   }
+  .buttons_container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
   .more_btn {
-    grid-column: span 2;
-    justify-self: center;
+    width: auto;
+    padding: 10px 20px;
   }
 }
