--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@
   --background-color: #090f20;
   --text-color: #d1d5d0;
 
-  --desktop-background: #142047;
-  --desktop-gradient: radial-gradient(at center top, #142047, #010101) 0px;
-
   --section-title: #26acd0;
   --title-font-weight: 700;
   /*----skills section*/
   --box-background: rgb(51, 62, 111);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 @media (prefers-color-scheme: light) {
   :root {
@@ -31,10 +31,15 @@
 }
 body {
   margin: 0;
-  background-color: var(--background-color);
-  color: var(--text-color);
+  color: #d1d5d0;
   line-height: 1.5;
   font-family: "Inter";
+  font-size: smaller;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 10, 31, 1),
+    rgba(0, 29, 61, 1)
+  );
 }
 
 body::-webkit-scrollbar {
@@ -50,11 +55,10 @@ body::-webkit-scrollbar-thumb {
 
 @media only screen and (min-width: 600px) {
   body {
-    background-color: var(--desktop-background);
-    background: var(--desktop-gradient);
     transition: background 500ms;
-    width: 50rem;
+    width: 48rem;
     margin: auto;
     z-index: -1;
+    font-size: medium;
   }
 }
