--- a/src/componentsCSS/projects.module.css
+++ b/src/componentsCSS/projects.module.css
@@ -46,6 +46,7 @@
     justify-content: space-between;
     padding: 20px 10px;
     align-items: center;
+    font-size: smaller;
   }
   .project_img {
     width: 20vw;
