--- a/src/componentsCSS/socials.module.css
+++ b/src/componentsCSS/socials.module.css
@@ -32,6 +32,7 @@
   text-decoration: none;
   transition-property: box-shadow;
   transition-duration: 200ms;
+  font-size: 0.8rem;
 }
 .social_container:hover {
   box-shadow: 0 0 0 5px #3c49766c;
@@ -40,37 +41,42 @@
 .email_div {
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.2);
-  width: 70%;
+  width: 90%;
   margin: auto;
-  padding: 10px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  border-radius: 30px;
+  border-radius: 50px;
   text-align: center;
-  gap: 10px;
+  padding: 10px 20px;
 }
 .email_span {
   opacity: 0.7;
   margin: auto;
+  font-size: 1rem;
 }
 
 .copy_btn {
-  padding: 10px 15px;
-  border-radius: 20px;
+  padding: 0;
+  margin: 0;
+  background: none;
   border: none;
-  background-color: #0064d7;
-  color: #d1d5dc;
+  font-family: "Inter";
   font-weight: bold;
+  color: white;
   cursor: pointer;
-  font-family: "Inter", sans-serif;
-  margin: auto;
 }
 
 @media only screen and (min-width: 600px) {
   .email_div {
     margin-top: 3vh;
     width: 60%;
+  }
+  .copy_btn {
+    margin: 0;
+  }
+  .email_span {
+    margin: 0;
   }
 }
