--- a/src/componentsCSS/experience.module.css
+++ b/src/componentsCSS/experience.module.css
@@ -17,8 +17,9 @@
 .xp_main ul {
   margin-top: 10vw;
   padding: 0;
+  margin: 0;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
   .xp_main {
     margin: 5vw 0;
   }
