--- a/src/componentsCSS/projects.module.css
+++ b/src/componentsCSS/projects.module.css
@@ -33,7 +33,7 @@
   text-align: center;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 720px) {
   .projects_container {
     width: 100%;
     flex-wrap: wrap;
@@ -42,14 +42,13 @@
     flex-direction: row;
     width: 70%;
     margin: auto;
-    gap: 20px;
     justify-content: space-between;
-    padding: 20px 10px;
     align-items: center;
     font-size: smaller;
+    padding: 1vw;
   }
   .project_img {
-    width: 20vw;
+    width: 50%;
   }
   .info {
     margin-bottom: 10px;
