mejora en el navbar y cambio de tamaño de fuente

--- a/src/componentsCSS/projects.module.css
+++ b/src/componentsCSS/projects.module.css
@@ -44,7 +44,7 @@
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    font-size: smaller;
+    font-size: small;
     padding: 1vw;
   }
   .project_img {
