--- a/src/componentsCSS/main.module.css
+++ b/src/componentsCSS/main.module.css
@@ -34,11 +34,9 @@
   .main_container {
     flex-direction: row;
     margin: 0;
+    margin-top: 16vh;
   }
   .main_info {
     width: 50%;
-  }
-  .title {
-    font-size: 2.2rem;
   }
 }
