--- a/src/componentsCSS/navbar.css
+++ b/src/componentsCSS/navbar.css
@@ -11,7 +11,6 @@
   border-radius: 20px;
   color: white;
   margin: 0 10px;
-  font-size: 0.9rem;
   transition: background 300ms;
   cursor: pointer;
 }
@@ -44,7 +43,6 @@
 a {
   color: #d1d5d0;
   text-decoration: none;
-  font-size: larger;
 }
 
 .eleazar {
@@ -69,9 +67,10 @@ a {
   display: none;
   align-items: center;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
+  left: 0;
   z-index: 999;
-  transition: all 300ms;
+  transition: all 500ms;
   width: 99vw;
   height: 15vh;
   top: 0;
@@ -91,7 +90,7 @@ a {
 .scrolled {
   border-bottom: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px -20px rgba(255, 255, 255, 0.37);
-
+  height: 14vh;
 }
 
 .see_more {
@@ -116,9 +115,8 @@ a {
   }
   .desktop_navbar_main {
     display: flex;
-
   }
-  .desktop_navbar{
+  .desktop_navbar {
     width: 70%;
   }
 }
