--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@
   margin: 20px;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5vh;
 }
 
-@media (min-width: 600px){
-  .app{
+@media (min-width: 600px) {
+  .app {
     width: 48rem;
     margin: auto;
   }
