--- a/src/componentsCSS/aboutme.module.css
+++ b/src/componentsCSS/aboutme.module.css
@@ -1,5 +1,7 @@
 .aboutme_main {
-  margin: 5vw auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 .aboutme_title {
   color: var(--section-title);
@@ -7,9 +9,4 @@
 
 .p {
   margin: 0 3vw;
-}
-@media only screen and (min-width: 800px) {
-  .p {
-    margin: 0 2vw;
-  }
 }
