--- a/src/componentsCSS/skills.module.css
+++ b/src/componentsCSS/skills.module.css
@@ -1,3 +1,8 @@
+.skills_main {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
 .main {
   display: flex;
   align-items: center;
@@ -15,7 +20,7 @@
   background-color: #198754;
   padding: 10px 20px;
   width: 60%;
-  border-radius: 20px;
+  border-radius: 50px;
   transition: all 300ms;
   color: (--text-color);
   margin: 0px 10px auto 10px;
@@ -44,7 +49,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 5vw auto;
 }
 
 .skill_title {
@@ -62,11 +66,11 @@
   justify-content: center;
   align-items: center;
   color: var(--box-text);
-  background: rgba(255, 255, 255, 0.1); /* Fondo translúcido */
   backdrop-filter: blur(10px); /* Efecto de desenfoque */
   -webkit-backdrop-filter: blur(10px); /* Compatibilidad para Safari */
   border-radius: 12px; /* Bordes redondeados */
   border: 1px solid rgba(255, 255, 255, 0.2);
+  background: #181f4630;
 }
 
 .skill:hover {
@@ -93,6 +97,7 @@ svg {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
+    margin: 5vh auto;
   }
   .skills_image_container {
     justify-content: center;
