--- a/src/componentsCSS/socials.module.css
+++ b/src/componentsCSS/socials.module.css
@@ -1,10 +1,13 @@
+.socials_main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
 .socials_main h2 {
   color: var(--section-title);
 }
 
-.socials_main {
-  margin: 5vw 0;
-}
 .socials {
   display: flex;
   justify-content: center;
@@ -16,10 +19,10 @@
   margin: 5px;
 }
 .social_container {
-  background: rgba(255, 255, 255, 0.1); /* Fondo translúcido */
-  backdrop-filter: blur(10px); /* Efecto de desenfoque */
-  -webkit-backdrop-filter: blur(10px); /* Compatibilidad para Safari */
-  border-radius: 12px; /* Bordes redondeados */
+  background: #181f4630;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.2);
   display: flex;
   flex-direction: column;
