--- a/portafolio-tailwindcss/src/index.css
+++ b/portafolio-tailwindcss/src/index.css
@@ -18,10 +18,13 @@ body {
 */
 
   color: #d1d5d0;
-  background-image: url("/background-gradient.png");
   margin: 0;
-  min-height: 100vh;
+
+  background-image: url("/background-gradient.webp");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+  background-position: top center;
 }
 ul {
   list-style-type: circle;
